# livraria

./: .gitignore  db.sqlite3  pyproject.toml
core/migrations/: 0001_initial.py  0002_editora.py
livraria/: settings.py
